--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple To DO List</title>
+    <title>Event Lisner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d521dd3dda.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body class=" text-white pt-5">
+    <section id="alert" class="container text-center positoning">
+        <div class="card w-75 m-auto">
+            <div class="p-4 text-start">
+              <h5>Your Color Has Been Changed :</h5>
+              <p >You have changed your background color lets enjoy the To Do List</p>
+              <div class="text-end">
+                <a href="#" id="alert-off" class=" px-5 btn btn-primary">Ok</a>
+              </div>
+            </div>
+          </div>
+    </section>
     <section class="container mb-5 text-center">
         <h3 id="h1">If you don't like the Background color</h3>
         <p id="p">You can change it by clicking the button below :</p>
-        <button id="letsStart" class="btn btn-primary m-5 " onclick="makeChabges()">Lets Change</button>
+        <button id="letsStart" class="btn btn-primary m-5 " onclick="makeChanges()">Lets Change</button>
         <button id="letsEnd" class="btn btn-primary m-5" onclick="makeChanges2()">confirm Change</button>
         <div style="display: none;" id="buttons">
             <button class="btn btn-secondary m-1" onclick="document.body.style.backgroundColor = '#343a40'">Make Gray</button>
@@ -26,13 +38,18 @@
     </section>
     <section class="container mb-5 text-center">
         <h1 class="m-5">To Do List</h1>
-        <input type="text" class="border border-2 border-secondary w-100 p-2 rounded" id="input-fild">
-            <button class="btn btn-primary w-25 mt-3 mb-4" id="upadated-input">update</button>
+        <input type="text" class="w-100 p-2 rounded" id="input-fild">
+        <div id="sAlart" class="secound-alert my-3 px-3 py-1">
+            <i class="exclamation fa-solid fa-circle-exclamation"></i>
+            <p>Please Enter some Valid Input</p>
+            <i id="again-off" class="point fa-solid fa-xmark"></i>
+        </div>
+        <button class="btn btn-primary w-25 mt-3 mb-4" id="upadated-input">update</button>
         <ul id="input-ul">
         </ul>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="scripts/toDo.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="script/toDoList.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
