--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class=" text-white pt-5">
     <section id="alert" class="container text-center positoning">
         <div class="card w-75 m-auto">
-            <div class="pb-4">
+            <div class="px-2 pb-4">
               <div class="text-end">
                 <i id="alert-off" class=" point fa-solid fa-square-xmark "></i>
               </div>
